# claude-pdd-cli

./: .gitignore  .npmignore  CHANGELOG.md  COMPLETE-USAGE-GUIDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  USAGE.md  cicd_fix_commit.txt  commit_message.txt  jest.config.cjs  jest.config.js  npm_auth_fix_commit.txt  package-lock.json  package.json  security_fix_commit.txt  tsconfig.json
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: USAGE.md
examples/: README.md
examples/java/: README.md  pom.xml
examples/nodejs/: README.md  package.json
examples/python/: README.md  pyproject.toml
scripts/: copy-templates.js
src/: index.ts
src/commands/: config.ts  doctor.ts  init.ts  status.ts  switch-framework.ts  update.ts
src/core/: ccpm-installer.ts  config-generator.ts  detector.ts  framework-detector.ts  template-installer.ts  template-manager.ts  types.ts
src/core/__tests__/: detector.test.ts
src/tdd-enhancements/agents/: tdd-agent.md  test-generator.md
src/tdd-enhancements/commands/tdd/: cycle.md  green.md  red.md  refactor.md  spec-to-test.md
src/tdd-enhancements/workflows/: issue-to-test.md  spec-driven-tdd.md
src/templates/.claude/agents/: test-runner.md
src/templates/.claude/commands/pm/: blocked.md  epic-list.md  epic-merge.md  epic-refresh.md  epic-show.md  epic-status.md  epic-sync.md  help.md  in-progress.md  init.md  next.md  prd-list.md  prd-status.md  search.md  standup.md  status.md  validate.md
src/templates/.claude/scripts/pm/: blocked.sh  epic-list.sh  next.sh  standup.sh  validate.sh
src/templates/agents/: code-reviewer.md  parallel-worker.md  performance-analyzer.md  prd-analyzer-designer.md  product-manager.md  security-auditor.md  task-decomposer.md  tdd-architect.md  test-case-generator.md  test-strategist.md
src/templates/commands/: commit.md
src/templates/commands/pm/: blocked.md  epic-manage.md  issue-start.md  issue-sync.md  next.md  prd-new.md  prd-parse.md  standup.md  task-decompose.md  workflow-status.md
src/templates/commands/tdd/: README.md  green.md  init.md  parallel-status.md  red.md  refactor.md  reset.md  status.md
src/templates/configs/: example.tasks.json  project-config.json  tdd-state.json
src/templates/frameworks/framework-configs/: go.json  java.json  nodejs.json  python.json  rust.json
src/templates/hooks/: commit-validator.sh  tdd-guard.sh  test-runner.sh
src/templates/rules/: command-templates.md  commit-standards.md  parallel-execution.md  tdd-phases.md
src/templates/schemas/: design.schema.json  requirements.schema.json
src/templates/scripts/pm/: next-task.sh  sync-to-github.sh  validate-task-decomposition.sh
src/templates/scripts/tdd/: init.sh  project-detector.sh  reset.sh  state-manager.sh
src/ui/: output.ts
tests/: setup.ts  version.test.ts
wiki-content/: Architecture.md  Branch-Management.md  Development-Guide.md  Home.md  Release-Process.md  Troubleshooting.md
